fixed mobile spacing and dealer aces

--- a/css/main.css
+++ b/css/main.css
@@ -74,7 +74,7 @@ html, body {
 	background-color: #B2F5CC;
 	border-radius: 20px;
 	height: 150px;
-	width: 500px;
+	width: 450px;
 	margin: 40px 0px 0px 50px;
 	font-family: Courier;
 	text-indent: 10px;
@@ -86,7 +86,7 @@ html, body {
 	background-color: #B2F5CC;
 	border-radius: 20px;
 	height: 150px;
-	width: 500px;
+	width: 450px;
 	margin: 40px 0px 0px 20px;
 	font-family: Courier;
 	text-indent: 10px;
